--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "livewire/livewire": "^3.6",
         "livewire/volt": "^1.7.0",
         "maatwebsite/excel": "^3.1",
-        "pragmarx/google2fa": "^8.0"
+        "pragmarx/google2fa": "^8.0",
+        "pragmarx/google2fa-qrcode": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
