--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "livewire/volt": "^1.7.0",
         "maatwebsite/excel": "^3.1",
         "pragmarx/google2fa": "^8.0",
-        "pragmarx/google2fa-qrcode": "^3.0"
+        "pragmarx/google2fa-qrcode": "^3.0",
+        "stripe/stripe-php": "^19.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
